[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://GroundTileSet.tres" type="TileSet" id=2]
[ext_resource path="res://assets/BKGFall.png" type="Texture" id=3]
[ext_resource path="res://EnemyPumpkin.tscn" type="PackedScene" id=4]
[ext_resource path="res://ChangeStage.tscn" type="PackedScene" id=5]
[ext_resource path="res://Uva.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/music/wav/level.wav" type="AudioStream" id=7]
[ext_resource path="res://StageThree.gd" type="Script" id=8]
[ext_resource path="res://assets/fonts/pixel_nes/Pixel_NES/Pixel_NES.otf" type="DynamicFontData" id=9]
[ext_resource path="res://Pera.tscn" type="PackedScene" id=10]
[ext_resource path="res://Naranja.tscn" type="PackedScene" id=11]
[ext_resource path="res://EnemyOnion.tscn" type="PackedScene" id=12]
[ext_resource path="res://Objects.tres" type="TileSet" id=13]

[sub_resource type="DynamicFont" id=1]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[node name="StageThree" type="Node2D"]
script = ExtResource( 8 )

[node name="ChangeStage" parent="." instance=ExtResource( 5 )]
position = Vector2( 560, -120 )
target_stage = "res://MainWinter.tscn"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 1, 0.9 )
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -100
z_as_relative = false

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 0, -144 )
region_rect = Rect2( 0, 0, 16, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="ScoreCounter" type="Node" parent="."]

[node name="UI" type="CanvasLayer" parent="ScoreCounter"]

[node name="Control" type="Control" parent="ScoreCounter/UI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreValue" type="RichTextLabel" parent="ScoreCounter/UI/Control"]
margin_left = 53.0
margin_right = 93.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="RichTextLabel" parent="ScoreCounter/UI/Control"]
margin_left = 6.0
margin_right = 54.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 2 )
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesText" type="RichTextLabel" parent="ScoreCounter/UI/Control"]
margin_left = 6.0
margin_top = 16.0
margin_right = 46.0
margin_bottom = 56.0
custom_fonts/normal_font = SubResource( 3 )
text = "Lives "

[node name="LivesValue" type="RichTextLabel" parent="ScoreCounter/UI/Control"]
margin_left = 54.0
margin_top = 16.0
margin_right = 94.0
margin_bottom = 56.0
custom_fonts/normal_font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Platforms" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -589825, 24, 0, -655360, 24, 0, -655359, 24, 0, -655358, 24, 0, -655357, 24, 0, -655356, 24, 0, -655355, 24, 0, -655354, 24, 0, -655353, 24, 0, -655352, 24, 0, -655351, 24, 0, -655350, 24, 0, -655349, 24, 0, -655348, 24, 0, -655347, 24, 0, -655346, 24, 0, -655345, 24, 0, -655344, 24, 0, -655343, 24, 0, -655342, 24, 0, -655341, 24, 0, -655340, 24, 0, -655339, 24, 0, -655338, 24, 0, -655337, 24, 0, -655336, 24, 0, -655335, 24, 0, -655334, 24, 0, -655333, 24, 0, -655332, 24, 0, -655331, 24, 0, -655330, 24, 0, -655329, 24, 0, -655328, 24, 0, -655327, 24, 0, -655326, 24, 0, -655325, 24, 0, -655324, 24, 0, -524289, 24, 0, -589788, 24, 0, -458753, 24, 0, -524252, 24, 0, -393217, 24, 0, -458752, 19, 0, -458751, 19, 0, -458750, 19, 0, -458736, 28, 0, -458733, 28, 0, -458719, 19, 0, -458718, 19, 0, -458717, 19, 0, -458716, 24, 0, -327681, 24, 0, -393212, 19, 0, -393202, 28, 0, -393195, 28, 0, -393180, 24, 0, -262145, 24, 0, -327649, 19, 0, -327644, 24, 0, -196609, 24, 0, -262108, 24, 0, -131073, 24, 0, -196606, 28, 0, -196605, 43, 0, -196604, 44, 0, -196603, 44, 0, -196602, 44, 0, -196601, 45, 0, -196600, 28, 0, -196595, 28, 0, -196593, 28, 0, -196592, 28, 0, -196591, 28, 0, -196590, 28, 0, -196589, 28, 0, -196588, 28, 0, -196585, 28, 0, -196581, 28, 0, -196580, 43, 0, -196579, 44, 0, -196578, 44, 0, -196577, 44, 0, -196576, 45, 0, -196575, 28, 0, -196572, 24, 0, -65537, 24, 0, -131036, 24, 0, -1, 24, 0, -65527, 28, 0, -65510, 28, 0, -65500, 24, 0, 65535, 24, 0, 10, 28, 0, 25, 28, 0, 36, 24, 0, 131071, 24, 0, 65553, 19, 0, 65555, 19, 0, 65572, 24, 0, 196607, 24, 0, 131084, 19, 0, 131085, 19, 0, 131086, 19, 0, 131094, 19, 0, 131095, 19, 0, 131096, 19, 0, 131108, 24, 0, 262143, 24, 0, 196608, 19, 0, 196609, 19, 0, 196619, 19, 0, 196633, 19, 0, 196644, 24, 0, 327679, 24, 0, 262154, 19, 0, 262162, 19, 0, 262170, 19, 0, 262180, 24, 0, 393215, 24, 0, 327689, 19, 0, 327707, 19, 0, 327716, 24, 0, 458751, 24, 0, 393224, 19, 0, 393243, 19, 0, 393252, 24, 0, 524287, 24, 0, 458752, 19, 0, 458753, 19, 0, 458757, 19, 0, 458758, 19, 0, 458759, 19, 0, 458760, 19, 0, 458763, 19, 0, 458764, 19, 0, 458765, 19, 0, 458769, 19, 0, 458770, 19, 0, 458771, 19, 0, 458779, 19, 0, 458780, 19, 0, 458781, 19, 0, 458782, 19, 0, 458786, 19, 0, 458787, 19, 0, 458788, 24, 0, 589823, 24, 0, 524288, 28, 0, 524289, 28, 0, 524293, 28, 0, 524294, 28, 0, 524295, 28, 0, 524296, 28, 0, 524299, 28, 0, 524300, 28, 0, 524301, 28, 0, 524305, 28, 0, 524306, 28, 0, 524307, 28, 0, 524315, 28, 0, 524316, 28, 0, 524317, 28, 0, 524318, 28, 0, 524322, 28, 0, 524323, 28, 0, 524324, 24, 0, 786432, 24, 0, 786433, 24, 0, 786434, 24, 0, 786435, 24, 0, 786436, 24, 0, 786437, 24, 0, 786438, 24, 0, 786439, 24, 0, 786440, 24, 0, 786441, 24, 0, 786442, 24, 0, 786443, 24, 0, 786444, 24, 0, 786445, 24, 0, 786446, 24, 0, 786447, 24, 0, 786448, 24, 0, 786449, 24, 0, 786450, 24, 0, 786451, 24, 0, 786452, 24, 0, 786453, 24, 0, 786454, 24, 0, 786455, 24, 0, 786456, 24, 0, 786457, 24, 0, 786458, 24, 0, 786459, 24, 0, 786460, 24, 0, 786461, 24, 0, 786462, 24, 0, 786463, 24, 0, 786464, 24, 0, 786465, 24, 0, 786466, 24, 0, 786467, 24, 0, 786468, 24, 0 )

[node name="BackObjects" type="TileMap" parent="."]
tile_set = ExtResource( 13 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -524287, 28, 0, -393211, 2, 0, -393186, 2, 0, -327675, 13, 0, -327650, 13, 0, -262139, 24, 0, -262128, 28, 0, -262125, 28, 0, -262114, 24, 0, 65559, 29, 0, 262150, 2, 0, 262173, 2, 0, 262179, 2, 0, 327686, 13, 0, 327709, 13, 0, 327715, 13, 0, 393222, 24, 0, 393228, 28, 0, 393245, 24, 0, 393246, 29, 0, 393251, 24, 0 )

[node name="Uva" parent="." instance=ExtResource( 6 )]
position = Vector2( 120, 88 )

[node name="Uva2" parent="." instance=ExtResource( 6 )]
position = Vector2( 200, 80 )

[node name="Uva3" parent="." instance=ExtResource( 6 )]
position = Vector2( 312, 88 )

[node name="Uva4" parent="." instance=ExtResource( 6 )]
position = Vector2( 464, 88 )

[node name="Uva5" parent="." instance=ExtResource( 6 )]
position = Vector2( 568, 80 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 24, 104 )

[node name="FrontObjects" type="TileMap" parent="."]
tile_set = ExtResource( 13 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 458754, 45, 0, 458755, 45, 0, 458756, 45, 0, 458761, 45, 0, 458762, 45, 0, 458766, 45, 0, 458767, 45, 0, 458768, 45, 0, 458772, 45, 0, 458773, 45, 0, 458774, 45, 0, 458775, 45, 0, 458776, 45, 0, 458777, 45, 0, 458778, 45, 0, 458783, 45, 0, 458784, 45, 0, 458785, 45, 0, 524288, 45, 0, 524289, 45, 0, 524290, 46, 0, 524291, 46, 0, 524292, 46, 0, 524293, 45, 0, 524294, 45, 0, 524295, 45, 0, 524296, 45, 0, 524297, 46, 0, 524298, 46, 0, 524299, 45, 0, 524300, 45, 0, 524301, 45, 0, 524302, 46, 0, 524303, 46, 0, 524304, 46, 0, 524305, 45, 0, 524306, 45, 0, 524307, 45, 0, 524308, 46, 0, 524309, 46, 0, 524310, 46, 0, 524311, 46, 0, 524312, 46, 0, 524313, 46, 0, 524314, 46, 0, 524315, 45, 0, 524316, 45, 0, 524317, 45, 0, 524318, 45, 0, 524319, 46, 0, 524320, 46, 0, 524321, 46, 0, 524322, 45, 0, 524323, 45, 0 )

[node name="EnemyOnion" parent="." instance=ExtResource( 12 )]
position = Vector2( 200, 24 )

[node name="EnemyOnion2" parent="." instance=ExtResource( 12 )]
position = Vector2( 568, 104 )

[node name="EnemyOnion3" parent="." instance=ExtResource( 12 )]
position = Vector2( 8, 40 )

[node name="EnemyOnion4" parent="." instance=ExtResource( 12 )]
position = Vector2( 8, -120 )

[node name="EnemyPumpkin" parent="." instance=ExtResource( 4 )]
position = Vector2( 40, -56 )

[node name="EnemyPumpkin2" parent="." instance=ExtResource( 4 )]
position = Vector2( 88, 104 )

[node name="EnemyPumpkin3" parent="." instance=ExtResource( 4 )]
position = Vector2( 440, -56 )

[node name="EnemyPumpkin4" parent="." instance=ExtResource( 4 )]
position = Vector2( 248, -56 )

[node name="EnemyPumpkin5" parent="." instance=ExtResource( 4 )]
position = Vector2( 280, 104 )

[node name="EnemyPumpkin6" parent="." instance=ExtResource( 4 )]
position = Vector2( 216, 104 )

[node name="Pera" parent="." instance=ExtResource( 10 )]
position = Vector2( 24, 8 )

[node name="Pera2" parent="." instance=ExtResource( 10 )]
position = Vector2( 152, 40 )

[node name="Pera3" parent="." instance=ExtResource( 10 )]
position = Vector2( 216, 8 )

[node name="Pera4" parent="." instance=ExtResource( 10 )]
position = Vector2( 296, 24 )

[node name="Pera5" parent="." instance=ExtResource( 10 )]
position = Vector2( 376, 0 )

[node name="Pera6" parent="." instance=ExtResource( 10 )]
position = Vector2( 456, 16 )

[node name="Pera7" parent="." instance=ExtResource( 10 )]
position = Vector2( 560, -16 )

[node name="Naranja" parent="." instance=ExtResource( 11 )]
position = Vector2( 64, -72 )

[node name="Naranja2" parent="." instance=ExtResource( 11 )]
position = Vector2( 120, -72 )

[node name="Naranja3" parent="." instance=ExtResource( 11 )]
position = Vector2( 288, -80 )

[node name="Naranja4" parent="." instance=ExtResource( 11 )]
position = Vector2( 464, -88 )

[node name="Naranja5" parent="." instance=ExtResource( 11 )]
position = Vector2( 512, -88 )

[node name="Naranja6" parent="." instance=ExtResource( 11 )]
position = Vector2( 40, -136 )
